-------------------------
o Add IPv6 hostname support to FreeIPMI, all of FreeIPMI can now take
  IPv6 addresses as inputs to "host" parameters, options, or inputs.
o Add --no-session option in ipmi-raw.
o Add SDR cache options to ipmi-config.
o Legacy -f short option for --flush-cache and -Q short option for
  quiet-cache.  Backwards compatible for tools that supported it
  before.
o Various performance improvements:
  - Remove excessive calls to secure_memset to clear memory.
  - Remove excessive memsets and clears of data.
  - Remove unnecessary "double input checks". 
  - Remove expensive input checks in libfreeipmi fiid library.
    Fallout from this may include FIID_ERR_FIELD_NOT_FOUND errors in
    different fiid functions.
  - Remove unnecessary input checks in libfreeipmi fiid library.
  - Add recent 'lookups' of fields in fiid library to internal cache.
o Various minor fixes/improvements
  - Update libfreeipmi core API to use poll() instead of select(), to
    avoid issues with applications with a high number of threads.

FreeIPMI 1.5.1 - 03/01/14
-------------------------
o Update Intel Node Manager support for 3.0 specification.
  - Update API and fiid templates in libfreeipmi.
  - Support new OEM SEL events
  - Update ipmi-oem commands.
    - Support new get/set-turbo-synchronization-ratio
    - Support new 'policypowerdomain' option in
      get-node-manager-capabilities and set-node-manager-policy.
    - Update output of get-node-manager-policy and
      get-node-manager-capabilities for changes.
    - get/set-node-manager-alert-thresholds converted to
      get/set-node-manager-policy-alert-thresholds.  Legacy commands
      still supported.
o Update libfreeipmi for IPMI 2.0 Errata 7.
  - Support/handle FRU Multirecord NVM Express type.
o Support Get Device SDR Info, Get Device SDR, and Reserve Device SDR
  Repository commands in libfreeipmi.
o Support ipmi-sel OEM interpretation of Linux kernel panics.