@@ -32,7 +32,8 @@ extern "C" {
 
 /* IPMI_NET_FN_OEM_GROUP_RQ / IPMI_NET_FN_OEM_GROUP_RS */
 /* achu: not official names, named based on use context */
-#define IPMI_CMD_OEM_GIGABYTE_PORT_CONFIGURATION 0x20
+#define IPMI_CMD_OEM_GIGABYTE_PORT_CONFIGURATION  0x20
+#define IPMI_CMD_OEM_GIGABYTE_PORT_CONFIGURATION2 0x21
 
 #ifdef __cplusplus
 }
