@@ -36,6 +36,10 @@ extern "C" {
 #define IPMI_OEM_GIGABYTE_BLOCK_PORT   0
 #define IPMI_OEM_GIGABYTE_UNBLOCK_PORT 1
 
+/* w/ IPMI_CMD_OEM_GIGABYTE_PORT_CONFIGURATION2 */
+#define IPMI_OEM_GIGABYTE_PORT_DISABLED 0
+#define IPMI_OEM_GIGABYTE_PORT_ENABLED  1
+
 #ifdef __cplusplus
 }
 #endif
