@@ -398,6 +398,10 @@ or failover.  (See \fIget\-nic\-mode\fR above for description on
 dedicated vs. shared vs failover modes.)  Command confirmed to work on
 GIGABYTE MD90-FS0-ZB.
 .TP
+.B get-bmc-services
+This OEM command will display the enable/disable state of BMC services
+besides IPMI.  Command confirmed to work on GIGABYTE MD90-FS0-ZB.
+.TP
 .B set-bmc-services \fIenable|disable\fR \fIssh|http|rpcbind|svrloc|https|avocenkvm|wbem-http|wbem-https\fR
 This OEM command will enable or disable BMC services besides IPMI.
 Command confirmed to work on GIGABYTE MD90-FS0-ZB.
