@@ -7,6 +7,7 @@ o Add SDR cache options to ipmi-config.
 o Legacy -f short option for --flush-cache and -Q short option for
   quiet-cache.  Backwards compatible for tools that supported it
   before.
+o In ipmi-oem, support Gigabyte get-bmc-services and set-bmc-services.
 o Various performance improvements:
   - Remove excessive calls to secure_memset to clear memory.
   - Remove excessive memsets and clears of data.
